# vision_agent_evolve

./: FIXES_SUMMARY.md  HOW_TO_RUN.md  PROJECT_ANALYSIS_AND_REDESIGN.md  table_crop_all_v3_dev20.json  table_crop_jinja_dev20.json  table_crop_tool_dev20.json  table_manual_skill_v2_dev20.json
vision_agent_evolve/: .gitignore  EVOLUTION_FLOW_FIXED.md  EXPERIMENT_PLAN.md  FINAL_PROPOSAL.md  FINAL_STATUS.md  FIXES_NEEDED.md  IDEA_REPORT.md  PAPER_PLAN.md  QUICKSTART.md  README.md  RUN_COMMANDS.md  SUBSET_EVOLUTION_GUIDE.md  VISUAL_ANALYSIS_EXAMPLE.md  VISUAL_ANALYSIS_SUMMARY.md  VTOOLR1_COMPARISON_CONTRACT.md  chartqa_edit.py  chartqa_edit_artifact.py  chartqa_edit_attempt.py  chartqa_edit_clear.py  chartqa_edit_correct.py  chartqa_edit_demo.py  chartqa_edit_final.py  chartqa_edit_final_demo.py  chartqa_edit_refined.py  chartqa_edit_simulation.py  check_masks.py  edit_chart.py  first_10_evolves.json  llm_chat_api_guide.md  program.md  pyproject.toml  run.py  solution.py  test_agent_artifact_flow.py  test_mathvista_gate.py  test_minimal_evolve_loop.py  test_structured_benchmark.py  test_tirbench_minimal.py  test_visual_analysis.py  test_visualtoolbench_minimal.py  (+1 more)
vision_agent_evolve/config/: manual_vtool_table_teacher_bank.json
vision_agent_evolve/core/: __init__.py  agent.py  parser.py  skill_routing.py  structured_data.py  tirbench_runner.py  tool_calling_runtime.py  types.py  visualtoolbench_runner.py  vlm_client.py
vision_agent_evolve/docs/: CHARTQA_DEMO.md  CLUSTER_HANDOFF_2026_04_02.md  CODEX_SESSION_HANDOFF.md  FUNCTION_CALLING_SKILLS.md  REFOCUS_CHART_PROBE.md  (+16 more)
(+1295 files in other folders)
